--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu content-id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Gaming Accessories</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item (click)="closeMenu()" routerLink="/home">Home</ion-item>
+        <ion-item (click)="closeMenu()" routerLink="/about">About</ion-item>
+        <ion-item (click)="closeMenu()" routerLink="/list">List</ion-item>
+        <ion-item (click)="closeMenu()" routerLink="/create">Add a product</ion-item>
+        <ion-item (click)="closeMenu()" routerLink="/gps">Navigate</ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
